--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "nvim/.config/nvim"]
 	path = nvim/.config/nvim
 	url = git@github.com:GerardHH/nvim.git
+[submodule "proprietary"]
+    path = proprietary
+    url = git@github.com:GerardHH/proprietary.git
