--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -8,15 +8,19 @@
     commit-fixup-all = commit --all --fixup
     commit-message = commit --message
     commit-message-all = commit --all --message
+    conflicts-add = !git add $(git conflicts-list)
+    conflicts-edit = !$EDITOR $(git conflicts-list)
+    conflicts-list = !git ls-files -u | cut -f 2 | sort -u | uniq
     current-branch-name = rev-parse --abbrev-ref HEAD
     list-tree = !git log $(git current-branch-name) --color=always --oneline --graph --decorate --remotes=*/$(git current-branch-name)
+    merge-continue = merge --continue
     patch = !git --no-pager diff --no-color
     push-current = !git push $(git remote) $(git current-branch-name)
     push-current-force = !git push-current --force
     rebase-autosquash = rebase --interactive --autosquash
     rebase-interactive = rebase --interactive
-    reset-remote = !git reset --hard $(git remote)/$(git current-branch-name)
     remote-branch = !git ls-remote $(git remote) $(git branch)
+    reset-remote = !git reset --hard $(git remote)/$(git current-branch-name)
     unstage-all = reset HEAD --
 [color]
 	ui = true
