--- a/lazygit/.config/lazygit/config.yml
+++ b/lazygit/.config/lazygit/config.yml
@@ -4,6 +4,11 @@ git:
   paging:
     colorArg: always
     pager: diff-so-fancy
+customCommands:
+  - key: 'U'
+    context: 'files'
+    command: 'git submodule-update-recursive-init'
+    description: 'Update all submodules'
 gui:
   # https://github.com/catppuccin/lazygit/blob/main/themes-mergable/mocha/blue.yml
   theme:
