--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -9,6 +9,8 @@ customCommands:
     context: 'files'
     command: 'git submodule-update-recursive-init'
     description: 'Update all submodules'
+confirmOnQuit: true
+disableStartupPopups: true
 gui:
   # https://github.com/catppuccin/lazygit/blob/main/themes-mergable/mocha/blue.yml
   theme:
