--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -5,7 +5,7 @@ include-file = $HOME/.config/polybar/mocha.ini
 background=${colors.base}
 border-color=${colors.crust}
 border-size=4pt
-font-0=Hack:size=13;2
+font-0=Hack Nerd Font:size=13;2
 foreground=${colors.surface0}
 
 enable-ipc = true
