polybar: Add simple battery to the right

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -13,6 +13,7 @@ enable-ipc = true
 modules-center = date
 
 [module/date]
+modules-right = battery
 type = internal/date
 date = %Y-%m-%d%
 time = %H:%M
@@ -22,6 +23,13 @@ format-background = ${colors.base}
 format-foreground = ${colors.text}
 
 label = %date% %time%
+; right
+[module/battery]
+type = internal/battery
+full-at = 99
+low-at = 5
+battery = BAT0
+adapter = ADP1
 
 ; [colors]
 ; background = #282A2E
