polybar: Split up the date and time so that the symbol can be colored

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -10,19 +10,32 @@ foreground=${colors.surface0}
 
 enable-ipc = true
 
-modules-center = date
-
-[module/date]
+modules-center = date time
 modules-right = battery
+
+; center
+[module/date]
 type = internal/date
 date = %Y-%m-%d%
+
+format-prefix = "  "
+format-prefix-background = ${colors.base}
+format-prefix-foreground = ${colors.peach}
+
+label = %date%
+label-foreground = ${colors.text}
+
+[module/time]
+type = internal/date
 time = %H:%M
 
-format = <label>
-format-background = ${colors.base}
-format-foreground = ${colors.text}
+format-prefix = "  "
+format-prefix-background = ${colors.base}
+format-prefix-foreground = ${colors.peach}
 
-label = %date% %time%
+label = %time%
+label-foreground = ${colors.text}
+
 ; right
 [module/battery]
 type = internal/battery
