polybar: Add memory and swap

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -11,7 +11,7 @@ foreground=${colors.surface0}
 enable-ipc = true
 
 modules-center = date time
-modules-right = battery
+modules-right = memory swap battery
 
 ; center
 [module/date]
@@ -37,6 +37,44 @@ label = %time%
 label-foreground = ${colors.text}
 
 ; right
+[module/memory]
+type = internal/memory
+
+format-prefix = " 󰍛 "
+format-prefix-background = ${colors.base}
+format-prefix-foreground = ${colors.peach}
+
+format = <bar-used>
+
+bar-used-indicator =
+bar-used-width = 8
+bar-used-foreground-0 = ${colors.green}
+bar-used-foreground-1 = ${colors.green}
+bar-used-foreground-2 = ${colors.maroon}
+bar-used-foreground-3 = ${colors.red}
+bar-used-fill = ▐
+bar-used-empty = ▐
+bar-used-empty-foreground = ${colors.surface0}
+
+[module/swap]
+type = internal/memory
+
+format-prefix = " 󰯍 "
+format-prefix-background = ${colors.base}
+format-prefix-foreground = ${colors.peach}
+
+format = <bar-swap-used>
+
+bar-swap-used-indicator =
+bar-swap-used-width = 8
+bar-swap-used-foreground-0 = ${colors.green}
+bar-swap-used-foreground-1 = ${colors.green}
+bar-swap-used-foreground-2 = ${colors.maroon}
+bar-swap-used-foreground-3 = ${colors.red}
+bar-swap-used-fill = ▐
+bar-swap-used-empty = ▐
+bar-swap-used-empty-foreground = ${colors.surface0}
+
 [module/battery]
 type = internal/battery
 full-at = 99
