--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -11,7 +11,7 @@ foreground=${colors.surface0}
 enable-ipc = true
 
 modules-center = date time
-modules-right = memory swap battery
+modules-right = cpu memory swap battery
 
 ; center
 [module/date]
@@ -37,6 +37,30 @@ label = %time%
 label-foreground = ${colors.text}
 
 ; right
+[module/cpu]
+type = internal/cpu
+warn-percentage = 80
+
+format-prefix = "  "
+format-prefix-background = ${colors.base}
+format-prefix-foreground = ${colors.peach}
+
+format = <ramp-coreload>
+format-foreground = ${colors.green}
+
+format-warn = <ramp-coreload>
+format-warn-foreground = ${colors.red}
+
+ramp-coreload-spacing = 1
+ramp-coreload-0 = ▁
+ramp-coreload-1 = ▂
+ramp-coreload-2 = ▃
+ramp-coreload-3 = ▄
+ramp-coreload-4 = ▅
+ramp-coreload-5 = ▆
+ramp-coreload-6 = ▇
+ramp-coreload-7 = █
+
 [module/memory]
 type = internal/memory
 
