polybar: Show icon when in warning mode

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -45,6 +45,9 @@ format-prefix-foreground = ${colors.peach}
 format = <ramp-coreload>
 format-foreground = ${colors.green}
 
+format-warn-prefix = ${self.format-prefix}
+format-warn-prefix-foreground = ${self.format-prefix-foreground}
+
 format-warn = <ramp-coreload>
 format-warn-foreground = ${colors.red}
 
