polybar: Use ramp for memory and swap

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -63,39 +63,53 @@ ramp-coreload-7 = █
 
 [module/memory]
 type = internal/memory
+warn-percentage = 80
 
 format-prefix = " 󰍛 "
 format-prefix-foreground = ${colors.peach}
 
-format = <bar-used>
+format = <ramp-used>
+format-foreground = ${colors.green}
 
-bar-used-indicator =
-bar-used-width = 8
-bar-used-foreground-0 = ${colors.green}
-bar-used-foreground-1 = ${colors.green}
-bar-used-foreground-2 = ${colors.maroon}
-bar-used-foreground-3 = ${colors.red}
-bar-used-fill = ▐
-bar-used-empty = ▐
-bar-used-empty-foreground = ${colors.surface0}
+format-warn-prefix = ${self.format-prefix}
+format-warn-prefix-foreground = ${self.format-prefix-foreground}
+
+format-warn = ${self.format}
+format-warn-foreground = ${colors.red}
+
+ramp-used-0 = ▁
+ramp-used-1 = ▂
+ramp-used-2 = ▃
+ramp-used-3 = ▄
+ramp-used-4 = ▅
+ramp-used-5 = ▆
+ramp-used-6 = ▇
+ramp-used-7 = █
 
 [module/swap]
 type = internal/memory
+warn-percentage = 80
 
 format-prefix = " 󰯍 "
 format-prefix-foreground = ${colors.peach}
 
-format = <bar-swap-used>
+format = <ramp-swap-used>
+format-foreground = ${colors.green}
 
-bar-swap-used-indicator =
-bar-swap-used-width = 8
-bar-swap-used-foreground-0 = ${colors.green}
-bar-swap-used-foreground-1 = ${colors.green}
-bar-swap-used-foreground-2 = ${colors.maroon}
-bar-swap-used-foreground-3 = ${colors.red}
-bar-swap-used-fill = ▐
-bar-swap-used-empty = ▐
-bar-swap-used-empty-foreground = ${colors.surface0}
+format-warn-prefix = ${self.format-prefix}
+format-warn-prefix-foreground = ${self.format-prefix-foreground}
+
+format-warn = ${self.format}
+format-warn-foreground = ${colors.red}
+
+ramp-swap-used-0 = ▁
+ramp-swap-used-1 = ▂
+ramp-swap-used-2 = ▃
+ramp-swap-used-3 = ▄
+ramp-swap-used-4 = ▅
+ramp-swap-used-5 = ▆
+ramp-swap-used-6 = ▇
+ramp-swap-used-7 = █
 
 [module/battery]
 type = internal/battery
