polybar: swap: Inherit from module/memory

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -87,20 +87,11 @@ ramp-used-6 = ▇
 ramp-used-7 = █
 
 [module/swap]
-type = internal/memory
-warn-percentage = 80
+inherit = module/memory
 
 format-prefix = " 󰯍 "
-format-prefix-foreground = ${colors.peach}
 
 format = <ramp-swap-used>
-format-foreground = ${colors.green}
-
-format-warn-prefix = ${self.format-prefix}
-format-warn-prefix-foreground = ${self.format-prefix-foreground}
-
-format-warn = ${self.format}
-format-warn-foreground = ${colors.red}
 
 ramp-swap-used-0 = ▁
 ramp-swap-used-1 = ▂
