polybar: Add fs

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -11,7 +11,7 @@ foreground=${colors.surface0}
 enable-ipc = true
 
 modules-center = date time
-modules-right = cpu memory swap battery
+modules-right = cpu memory swap fs battery
 
 ; center
 [module/date]
@@ -101,6 +101,19 @@ ramp-swap-used-4 = ▅
 ramp-swap-used-5 = ▆
 ramp-swap-used-6 = ▇
 ramp-swap-used-7 = █
+
+[module/fs]
+type = internal/fs
+warn-percentage = 80
+
+mount-0 = /
+
+format-mounted-prefix = " 󰋊 "
+format-mounted-prefix-foreground = ${colors.peach}
+
+format-mounted-foreground = ${colors.text}
+
+label-mounted = %percentage_free%%
 
 [module/battery]
 type = internal/battery
