polybar: Add wired/wifi connection/speed

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -11,7 +11,7 @@ foreground=${colors.surface0}
 enable-ipc = true
 
 modules-center = date time
-modules-right = cpu memory swap fs battery
+modules-right = wired-conn wired-down wired-up wifi-conn wifi-down wifi-up cpu memory swap fs battery
 
 ; center
 [module/date]
@@ -35,6 +35,72 @@ label = %time%
 label-foreground = ${colors.text}
 
 ; right
+[network-wired-shared]
+type = internal/network
+interface =
+interface-type = wired
+
+format-connected-prefix-foreground = ${colors.peach}
+format-disconnected-prefix-foreground = ${colors.peach}
+
+label-connected-foreground = ${colors.text}
+
+[module/wired-conn]
+inherit = network-wired-shared
+
+format-connected-prefix = " 󰈁"
+format-disconnected-prefix = " 󰈂"
+
+label-connected = " "
+label-disconnected = " "
+
+[module/wired-down]
+inherit = network-wired-shared
+
+format-connected-prefix = "󰇚 "
+
+label-connected = "%downspeed%"
+
+[module/wired-up]
+inherit = network-wired-shared
+
+format-connected-prefix = " 󰕒 "
+
+label-connected = "%upspeed%"
+
+[network-wifi-shared]
+type = internal/network
+interface =
+interface-type = wireless
+
+format-connected-prefix-foreground = ${colors.peach}
+format-disconnected-prefix-foreground = ${colors.peach}
+
+label-connected-foreground = ${colors.text}
+
+[module/wifi-conn]
+inherit = network-wifi-shared
+
+format-connected-prefix = " 󰖩"
+format-disconnected-prefix = " 󰖪"
+
+label-connected = " "
+label-disconnected = " "
+
+[module/wifi-down]
+inherit = network-wifi-shared
+
+format-connected-prefix = "󰇚 "
+
+label-connected = "%downspeed%"
+
+[module/wifi-up]
+inherit = network-wifi-shared
+
+format-connected-prefix = " 󰕒 "
+
+label-connected = "%upspeed%"
+
 [module/cpu]
 type = internal/cpu
 warn-percentage = 80
