polybar: Add keyboard

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -11,7 +11,7 @@ foreground=${colors.surface0}
 enable-ipc = true
 
 modules-center = date time
-modules-right = wired-conn wired-down wired-up wifi-conn wifi-down wifi-up cpu memory swap fs battery
+modules-right = wired-conn wired-down wired-up wifi-conn wifi-down wifi-up keyboard cpu memory swap fs battery
 
 ; center
 [module/date]
@@ -100,6 +100,22 @@ inherit = network-wifi-shared
 format-connected-prefix = " 󰕒 "
 
 label-connected = "%upspeed%"
+
+[module/keyboard]
+type = internal/xkeyboard
+blacklist-0 = scroll lock
+
+format-prefix = "  "
+format-prefix-foreground = ${colors.peach}
+
+format-foreground = ${colors.text}
+
+
+label-indicator-on-capslock = "󰪛 "
+label-indicator-on-capslock-foreground = ${colors.red}
+
+label-indicator-on-numlock = "󰏁 "
+label-indicator-on-numlock-foreground = ${colors.red}
 
 [module/cpu]
 type = internal/cpu
