--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -10,8 +10,18 @@ foreground=${colors.surface0}
 
 enable-ipc = true
 
+modules-left = title
 modules-center = date time
 modules-right = wired-conn wired-down wired-up wifi-conn wifi-down wifi-up keyboard cpu memory swap fs battery
+
+; left
+[module/title]
+type = internal/xwindow
+
+format-prefix = "  "
+format-prefix-foreground = ${colors.peach}
+
+format-foreground = ${colors.text}
 
 ; center
 [module/date]
