polybar: Add workspaces

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -10,7 +10,7 @@ foreground=${colors.surface0}
 
 enable-ipc = true
 
-modules-left = title
+modules-left = workspaces title
 modules-center = date time
 modules-right = wired-conn wired-down wired-up wifi-conn wifi-down wifi-up keyboard cpu memory swap fs battery
 
@@ -22,6 +22,16 @@ format-prefix = "  "
 format-prefix-foreground = ${colors.peach}
 
 format-foreground = ${colors.text}
+
+[module/workspaces]
+type = internal/xworkspaces
+enable-click = false
+enable-scrol = false
+
+label-active-foreground = ${colors.green}
+label-urgent-foreground = ${colors.yellow}
+label-occupied-foreground = ${colors.mauve}
+label-empty-foreground = ${colors.subtext0}
 
 ; center
 [module/date]
