polybar: Make up/down symbols sky color

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -77,12 +77,16 @@ label-disconnected = " "
 [module/wired-down]
 inherit = network-wired-shared
 
+format-connected-prefix-foreground = ${colors.sky}
+
 format-connected-prefix = "󰇚 "
 
 label-connected = "%downspeed%"
 
 [module/wired-up]
 inherit = network-wired-shared
+
+format-connected-prefix-foreground = ${colors.sky}
 
 format-connected-prefix = " 󰕒 "
 
@@ -110,12 +114,16 @@ label-disconnected = " "
 [module/wifi-down]
 inherit = network-wifi-shared
 
+format-connected-prefix-foreground = ${colors.sky}
+
 format-connected-prefix = "󰇚 "
 
 label-connected = "%downspeed%"
 
 [module/wifi-up]
 inherit = network-wifi-shared
+
+format-connected-prefix-foreground = ${colors.sky}
 
 format-connected-prefix = " 󰕒 "
 
