--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -12,3 +12,8 @@ desc = "Enter the child directory, or open the file"
 on   = [ "l" ]
 run  = "plugin --sync smart-enter"
 desc = "Enter the child directory, or open the file"
+
+[[manager.prepend_keymap]]
+on   = [ "p" ]
+run  = "plugin --sync smart-paste"
+desc = "Paste into the hovered directory or CWD"
