--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -17,3 +17,11 @@ desc = "Enter the child directory, or open the file"
 on   = [ "p" ]
 run  = "plugin --sync smart-paste"
 desc = "Paste into the hovered directory or CWD"
+
+[[manager.prepend_keymap]]
+on  = [ "k" ]
+run = "plugin --sync arrow --args=-1"
+
+[[manager.prepend_keymap]]
+on  = [ "j" ]
+run = "plugin --sync arrow --args=1"
