--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -25,3 +25,8 @@ run = "plugin --sync arrow --args=-1"
 [[manager.prepend_keymap]]
 on  = [ "j" ]
 run = "plugin --sync arrow --args=1"
+
+[[manager.prepend_keymap]]
+on   = [ "J" ]
+run  = "plugin keyjump"
+desc = "Keyjump (Normal mode)"
