yazi: Add yazi level when yazi shell is detected

--- a/yazi/.luarc.json
+++ b/yazi/.luarc.json
@@ -1,13 +1,14 @@
 {
     "diagnostics.globals": [
-        "ui",
         "Current",
+        "Header",
         "Manager",
         "Parent",
         "Preview",
         "Progress",
         "Status",
         "cx",
+        "ui",
         "ya"
     ]
 }
