--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -6,6 +6,12 @@ services:
     build:
       context: .
       dockerfile: dev-env.Dockerfile
+      args:
+        USER: $USER
+        USER_ID: ${USER_ID:-0}
+        GROUP_ID: ${GROUP_ID:-0}
     volumes:
       - /home/$USER:/home/$USER:rw
       - /nix:/nix:ro # Allow the user in container to find the symlinks created by home-manager
+    user: ${USER_ID:-0}:${GROUP_ID:-0}
+    working_dir: /home/$USER
